--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "react-simple-dropdown",
   "version": "1.0.0",
-  "description": "Simple strpped down React simple-dropdown",
+  "description": "Simple stripped down React simple-dropdown",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"npm run lib:dev\" \"npm run demo:dev\"",
+    "build": "npm run lib:prod && npm run demo:prod",
+    "lib:dev": "rollup -c -w -o dist/react-simple-dropdown.dev.js",
+    "lib:prod": " SET NODE_ENV=production && rollup -c -o dist/react-simple-dropdown.min.js",
+    "demo:dev": "webpack-dev-server --mode development --open --hot",
+    "demo:prod": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint ."
+    "lint": "eslint --ext .js,.jsx src/ demo/src",
+    "gzip-size": "node -e \"process.stdout.write('gzip size: ')\" && gzip-size --raw dist/react-simple-dropdown.min.js"
   },
   "repository": {
     "type": "git",
@@ -26,9 +32,11 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "concurrently": "^3.6.0",
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.0.0",
@@ -38,7 +46,16 @@
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-hot-loader": "^4.3.1",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-scss": "^0.4.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
@@ -47,7 +64,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.1"
+  },
+  "peerDependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
