--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "deploy:demo": "npm run build && git push origin `git subtree split --prefix demo/dist master`:gh-pages --force",
     "start": "webpack-dev-server --mode development --open --hot",
     "lint": "eslint --ext .js,.jsx src/ demo/src",
+    "lint:fix": "eslint --fix --ext .js,.jsx src/ demo/src",
+    "test": "jest",
     "gzip-size": "node -e \"process.stdout.write('JS gzip size: ')\" && gzip-size --raw dist/react-aria-dropdown.min.js && node -e \"process.stdout.write('CSS gzip size: ')\" && gzip-size --raw dist/react-aria-dropdown.min.css"
   },
   "repository": {
@@ -36,6 +38,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.4.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.7.0",
@@ -50,6 +53,7 @@
     "eslint-plugin-react": "^7.10.0",
     "gzip-size-cli": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.4.1",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
@@ -63,6 +67,7 @@
     "rollup-plugin-scss": "^0.4.0",
     "rollup-plugin-uglify": "^4.0.0",
     "sass-loader": "^7.0.3",
+    "sinon": "^6.1.3",
     "style-loader": "^0.21.0",
     "uglify-es": "^3.3.9",
     "uglifycss": "0.0.29",
