--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.4.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -58,6 +59,7 @@
     "gzip-size-cli": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
+    "jest-emotion": "^9.2.7",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
@@ -82,6 +84,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "emotion": "^9.2.6",
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
