--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dropdown-aria",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Simple and accessible React dropdown component",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "lint:fix": "eslint --fix --ext .js,.jsx src/ demo/src",
     "test": "jest",
     "test:update": "jest --updateSnapshot",
-    "gzip-size": "node -e \"process.stdout.write('JS gzip size: ')\" && gzip-size --raw dist/react-dropdown-aria.min.js && node -e \"process.stdout.write('CSS gzip size: ')\" && gzip-size --raw dist/react-dropdown-aria.min.css",
+    "gzip-size": "node -e \"process.stdout.write('JS gzip size: ')\" && gzip-size --raw dist/react-dropdown-aria.min.js",
     "analyze-bundle": "webpack --mode production --profile --json > stats.json && webpack-bundle-analyzer stats.json demo/dist -s gzip"
   },
   "repository": {
@@ -41,6 +41,7 @@
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.4.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-emotion": "^9.2.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -58,6 +59,7 @@
     "gzip-size-cli": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
+    "jest-emotion": "^9.2.7",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
@@ -68,26 +70,29 @@
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-scss": "^0.4.0",
     "rollup-plugin-uglify": "^4.0.0",
     "sass-loader": "^7.0.3",
     "sinon": "^6.1.3",
     "style-loader": "^0.21.0",
     "uglify-es": "^3.3.9",
-    "uglifycss": "0.0.29",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
+    "emotion": "^9.2.6",
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
+  "bundlesize": [
+    {
+      "path": "./dist/react-dropdown-aria.min.js"
+    }
+  ],
   "jest": {
     "modulePathIgnorePatterns": [
       "./node_modules"
