change build process

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-dropdown-aria",
   "version": "1.1.3",
   "description": "Simple and accessible React dropdown component",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
     "dev": "concurrently \"npm run lib:dev\" \"npm run demo:dev\"",
     "build": "npm run lib:prod && npm run demo:prod",
     "lib:dev": "rollup -c -w -o dist/react-dropdown-aria.dev.js",
-    "lib:prod": " SET NODE_ENV=production && rollup -c -o dist/react-dropdown-aria.min.js",
+    "lib:prod": "SET NODE_ENV=production && rollup -c",
     "demo:dev": "webpack-dev-server --mode development --open --hot",
     "demo:prod": "webpack --mode production",
     "deploy:demo": "npm run build && git push origin `git subtree split --prefix demo/dist master`:gh-pages --force",
