--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dropdown-aria",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Simple and accessible React dropdown component",
   "main": "dist/react-dropdown-aria.cjs.js",
   "module": "dist/react-dropdown-aria.esm.js",
@@ -72,7 +72,7 @@
     "sinon": "^6.1.5",
     "style-loader": "^0.21.0",
     "webpack": "^4.17.0",
-    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-bundle-analyzer": ">=3.3.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   },
