--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "demo:dev": "webpack-dev-server --mode development --open --hot",
     "demo:prod": "webpack --mode production",
     "deploy:demo": "npm run build && git push origin `git subtree split --prefix demo/dist master`:gh-pages --force",
-    "lint": "eslint --ext .js,.jsx src/ demo/src",
+    "lint": "eslint --ext .jsx src/ demo/src",
     "lint:fix": "eslint --fix --ext .js,.jsx src/ demo/src",
     "test": "jest",
     "test:update": "jest --updateSnapshot",
@@ -60,8 +60,8 @@
     "eslint-plugin-react": "^7.11.1",
     "gzip-size-cli": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.5.0",
-    "jest-emotion": "^9.2.7",
+    "jest": "^24.8.0",
+    "jest-emotion": "^10.0.11",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.9.3",
     "preconstruct": "^0.0.82",
@@ -98,9 +98,9 @@
     "setupFiles": [
       "./enzymeAdapter.setup.js"
     ],
-    "moduleNameMapper": {
-      "\\.(scss)$": "<rootDir>/src/__tests__/__mocks__/styleMock.js"
-    }
+    "snapshotSerializers": [
+      "jest-emotion"
+    ]
   },
   "preconstruct": {
     "source": "src/index.js"
