--- a/packages/react-dropdown-aria/tsconfig.json
+++ b/packages/react-dropdown-aria/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "jsx": "react",
     "moduleResolution": "node",
-    "rootDir": "src",
+    "rootDir": "./",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -20,6 +20,6 @@
     "esModuleInterop": true,
     "lib": ["es6", "dom"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "include": ["index.ts"],
+  "exclude": ["node_modules", "/__tests__/*"]
 }
