Fix test file pattern matcher

--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -68,7 +68,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "src/*(/(__tests?__/)([^_].*/)*?[^_][^/]*?\\.(test|spec)?\\.(tsx?))$",
+    "testRegex": "(/(__tests?__/)([^_].*/)*?[^_][^/]*?\\.(test|spec)?\\.(tsx?))$",
     "setupFiles": [
       "./enzymeAdapter.setup.ts"
     ],
