--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "bugs": {
     "url": "https://github.com/jfangrad/react-dropdown-aria/issues"
   },
-  "homepage": "https://github.com/jfangrad/react-dropdown-aria#readme",
+  "homepage": "https://jfangrad.github.io/react-dropdown-aria/",
   "workspaces": [
     "packages/*",
     "demo"
