update npmignore and move readme (will fix duplication later)

--- a/packages/react-dropdown-aria/.npmignore
+++ b/packages/react-dropdown-aria/.npmignore
@@ -1,7 +1,7 @@
-__tests__/
-components/
-styles/
-utils/
+/__tests__/
+/components/
+/styles/
+/utils/
 enzymeAdapter.setup.js
 tsconfig.json
 index.ts
