Update homepage in workspace

--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/jfangrad/react-dropdown-aria/issues"
   },
-  "homepage": "https://github.com/jfangrad/react-dropdown-aria#readme",
+  "homepage": "https://jfangrad.github.io/react-dropdown-aria/",
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
