--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -52,6 +52,7 @@
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
+    "tslint-react-hooks": "^2.2.2",
     "typescript": "^3.5.3"
   },
   "dependencies": {
