Mostly fully functional

--- a/packages/react-dropdown-aria/tsconfig.json
+++ b/packages/react-dropdown-aria/tsconfig.json
@@ -15,7 +15,7 @@
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": ["es6", "dom"]
