--- a/demo/package.json
+++ b/demo/package.json
@@ -36,7 +36,7 @@
     "@material-ui/core": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-dropdown-aria": "^1.4.0",
+    "react-dropdown-aria": "1.5.1",
     "react-hot-loader": "^4.3.4"
   }
 }
