--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lib:dev": "tsc -w",
     "lib:prod": "tsc",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint . --ext .ts,.tsx",
     "test": "jest",
     "test:update": "jest --updateSnapshot"
   },
@@ -29,31 +29,26 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/sinon": "^7.0.13",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.14",
-    "css-loader": "^0.28.11",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "jest": "^24.8.0",
     "jest-emotion": "^10.0.11",
     "jsx-loader": "^0.13.2",
-    "node-sass": "^4.9.3",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.3.4",
-    "sass-loader": "^7.1.0",
     "sinon": "^6.1.5",
-    "style-loader": "^0.21.0",
-    "ts-jest": "^24.0.2",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0",
-    "tslint-react-hooks": "^2.2.2",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "emotion": "^9.2.6"
