--- a/package.json
+++ b/package.json
@@ -18,33 +18,7 @@
     "test": "cd packages/react-dropdown-aria && yarn test",
     "test:update": "cd packages/react-dropdown-aria && yarn test:update"
   },
-  "dependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.5.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.14",
-    "css-loader": "^0.28.11",
-    "emotion": "^9.2.6",
-    "html-webpack-plugin": "^3.2.0",
-    "jsx-loader": "^0.13.2",
-    "node-sass": "^4.9.3",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.3.4",
-    "sass-loader": "^7.1.0",
-    "sinon": "^6.1.5",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.36.1",
-    "webpack-bundle-analyzer": ">=3.3.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
-  },
+  "dependencies": {},
   "keywords": [
     "react",
     "dropdown",
