--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -26,6 +26,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
+    "@types/node": "^13.13.5",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/sinon": "^7.0.13",
