--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -42,13 +42,14 @@
     "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^26.0.1",
     "jest-emotion": "^10.0.11",
     "jsx-loader": "^0.13.2",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sinon": "^6.1.5",
+    "ts-jest": "^25.5.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
