--- a/packages/react-dropdown-aria/.npmignore
+++ b/packages/react-dropdown-aria/.npmignore
@@ -2,7 +2,10 @@
 /components/
 /styles/
 /utils/
+/icons/
 enzymeAdapter.setup.js
 .eslintignore
 .eslintrc.js
 index.ts
+tsconfig.json
+yarn-error.log
