Remove comments from build

--- a/packages/react-dropdown-aria/tsconfig.json
+++ b/packages/react-dropdown-aria/tsconfig.json
@@ -18,7 +18,8 @@
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "removeComments": true,
   },
   "typeRoots": [
     "../../node_modules/@types",
