--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,8 @@
   "description": "Demo for react-aria-dropdown",
   "scripts": {
     "demo:dev": "webpack-dev-server --mode development --open --hot",
-    "demo:prod": "webpack --mode production"
+    "demo:prod": "webpack --mode production",
+    "deploy": "gh-pages -d ./dist"
   },
   "author": "Justin Fangrad",
   "license": "MIT",
@@ -20,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.14",
     "css-loader": "^0.28.11",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.14.1",
