Update homepage in package.json

--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/jfangrad/react-dropdown-aria/issues"
   },
-  "homepage": "https://jfangrad.github.io/react-dropdown-aria/",
+  "homepage": "https://github.com/jfangrad/react-dropdown-aria",
   "keywords": [
     "react",
     "dropdown",
