--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "url": "git+https://github.com/jfangrad/react-dropdown-aria.git"
   },
   "scripts": {
-    "build": "yarn lib:prod && yarn demo:prod",
+    "build": "yarn lib:build && yarn demo:prod",
     "deploy": "yarn --cwd ./demo deploy",
     "demo:dev": "yarn --cwd ./demo demo:dev",
     "demo:prod": "yarn --cwd ./demo demo:prod",
-    "lib:dev": "yarn --cwd ./packages/react-dropdown-aria lib:dev",
-    "lib:prod": "yarn --cwd ./packages/react-dropdown-aria lib:prod",
+    "lib:dev": "yarn --cwd ./packages/react-dropdown-aria dev",
+    "lib:build": "yarn --cwd ./packages/react-dropdown-aria build",
     "lint": "yarn --cwd ./packages/react-dropdown-aria lint",
     "test": "yarn --cwd ./packages/react-dropdown-aria test",
     "test:update": "yarn --cwd ./packages/react-dropdown-aria test:update"
