--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -3,10 +3,12 @@
   "version": "2.0.1",
   "description": "Simple and accessible React dropdown component",
   "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "lib:dev": "tsc -w",
-    "lib:prod": "tsc",
+    "dev": "rollup -c -w",
+    "prebuild": "rm -rf dist",
+    "build": "rollup -c --environment NODE_ENV:production",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "jest",
     "test:update": "jest --updateSnapshot"
@@ -31,6 +33,8 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
@@ -56,6 +60,9 @@
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "rollup": "^2.10.2",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-typescript2": "^0.27.1",
     "sinon": "^6.1.5",
     "ts-jest": "^25.5.0",
     "typescript": "^3.8.3"
