--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^16.8.6",
     "rollup": "^2.10.2",
     "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "sinon": "^6.1.5",
     "ts-jest": "^25.5.0",
