--- a/packages/react-dropdown-aria/tsconfig.json
+++ b/packages/react-dropdown-aria/tsconfig.json
@@ -16,6 +16,7 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["es6", "dom"],
     "removeComments": true,
