--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "prebuild": "cp ./README.md ./packages/react-dropdown-aria/README.md",
-    "build": "yarn lib:build && yarn demo:prod",
+    "build": "yarn lib:build && yarn demo:build",
     "deploy": "yarn --cwd ./demo deploy",
     "demo:dev": "yarn --cwd ./demo dev",
     "demo:build": "yarn --cwd ./demo build",
