scope under @redocly

--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dropdown-aria",
+  "name": "@redocly/react-dropdown-aria",
   "version": "2.0.7",
   "description": "Simple and accessible React dropdown component",
   "main": "dist/index.js",
