Update readme and package.json

--- a/demo/package.json
+++ b/demo/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d ./build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
