--- a/packages/react-dropdown-aria/tsconfig.json
+++ b/packages/react-dropdown-aria/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "module": "esnext",
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
     "jsx": "react",
+    "baseUrl": "./src",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
@@ -19,9 +20,6 @@
     "lib": ["es6", "dom"],
     "removeComments": true,
   },
-  "typeRoots": [
-    "../../node_modules/@types",
-  ],
-  "include": ["index.ts"],
-  "exclude": ["node_modules", "/__tests__/*", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "__tests__/**/*", "dist"]
 }
