--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@redocly/react-dropdown-aria",
-  "version": "2.0.11",
+  "name": "react-dropdown-aria",
+  "version": "2.0.7",
   "description": "Simple and accessible React dropdown component",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -41,14 +41,13 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
-    "@types/styled-components": "^5.1.2",
     "@types/node": "^13.13.5",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/sinon": "^7.0.13",
+    "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "jest-styled-components": "7.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.6.0",
@@ -59,6 +58,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "jest": "^26.0.1",
+    "jest-styled-components": "^7.0.3",
     "jsx-loader": "^0.13.2",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
@@ -68,6 +68,7 @@
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "sinon": "^6.1.5",
+    "styled-components": "^5.2.1",
     "ts-jest": "^25.5.0",
     "typescript": "^3.8.3"
   },
@@ -88,7 +89,9 @@
     "setupFiles": [
       "./enzymeAdapter.setup.ts"
     ],
-    "setupFilesAfterEnv": ["./styled.setup.ts"]
+    "setupFilesAfterEnv": [
+      "./styled.setup.ts"
+    ]
   },
   "bundlesize": [
     {
