--- a/packages/react-dropdown-aria/package.json
+++ b/packages/react-dropdown-aria/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dropdown-aria",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0",
   "description": "Simple and accessible React dropdown component",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
