--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-dropdown-aria": "3.0.0-rc.1",
+    "react-dropdown-aria": "3.0.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
